[fix] remove shadow from focused search mobile and some alignments in search form

--- a/src/less/definitions.less
+++ b/src/less/definitions.less
@@ -246,7 +246,7 @@
 @results-image-row-height-phone: 6rem;
 @search-width: 46rem;
 // heigh of #search, see detail.less
-@search-height: 8.6rem;
+@search-height: 8.7rem;
 
 /// Device Size
 /// @desktop > @tablet
@@ -257,7 +257,7 @@
 
 /// Autocomplete fixes/changes
 .autocomplete.open {
-  margin-top: 3.4rem !important;
+  margin-top: 3.6rem !important;
   box-shadow: var(--color-search-shadow-hover);
 }
 
